feat: Dynamic server name in swagger
